--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,27 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 data/
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+planner-react/node_modules
+planner-react/.pnp
+planner-react/.pnp.js
+
+# testing
+planner-react/coverage
+
+# production
+planner-react/build
+
+# misc
+planner-react/.DS_Store
+planner-react/.env.local
+planner-react/.env.development.local
+planner-react/.env.test.local
+.env.production.local
+
+planner-react/npm-debug.log*
+planner-react/yarn-debug.log*
+planner-react/yarn-error.log*
