--- a/planner-react/package.json
+++ b/planner-react/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.4",
     "react-redux": "^8.0.5",
